--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -21,7 +21,16 @@
 <li><span style="color:#066600;"><strong>топологическое пространство</strong></span>
   &mdash; упорядоченная пара $\langle X, \Omega\rangle$,
   где $X$(<em>носитель</em>) &mdash; множество,
-  а $\Omega$(<em>топология</em>) &mdash; множество каких-то его подмножеств.</li>
+  а $\Omega$(<em>топология</em>) &mdash; множество каких-то его подмножеств + аксиомы:
+  <ul>
+    <li> $\varnothing \in \Omega, X \in \Omega$ (пустое множество и всё пространство открыты) </li>
+    <li> Если $\{A_i\}$, $A_i \in \Omega$ &mdash; некоторое семейство элементов $\Omega$,
+    то $\bigcup_i A_i \in \Omega$ (объединение произвольного семейства открытых множеств открыто);</li>
+    <li>Если $A_1, A_2, \dots, A_n$, $A_i \in \Omega$ &mdash; конечное множество открытых множеств, 
+    то его пересечение также открыто: $A_1 \cap A_2 \cap \dots \cap A_n \in \Omega$
+    </li>
+  </ul>
+  </li>
 <li><span style="color:#066600;"><strong>открытое и замкнутое множество</strong></span><br/>
   <em>Открытое множество</em> &mdash; множество из $\Omega$.<br/>
   <em>Замкнутое множество</em> &mdash; мн-во, дополнение которого открыто.</li>
