Add induced topology

--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -42,7 +42,9 @@
 <li><span style="color:#066600;"><strong>дискретная топология</strong></span>
   $X \neq \emptyset, \Omega = 2^X $</li>
 <li><strong>топология на частично упорядоченном множестве</strong></li>
-<li><strong>индуцированная топология на подпространстве</strong></li>
+<li><strong>индуцированная топология на подпространстве</strong>
+    <br>Пусть лано какое-то $S \subseteq X$. Индуцированная топология на подпространстве $X$ &mdash; $\Omega' = \left\{ y \cup X | y \in \Omega \right\}$
+</li>
 <li><strong>связность</strong></li>
 </ul>
 </li>
@@ -62,7 +64,8 @@
 <li><span style="color:#066600;"><strong>метапеременные</strong></span> &mdash; "Plaseholder" for variables</li>
 <li><span style="color:#066600;"><strong>пропозициональные переменные</strong></span> &mdash; символы, обозначающие высказывания</li>
 <li><span style="color:#066600;"><strong>аксиома</strong></span> &mdash; высказывание</li>
-<li><span style="color:#066600;"><strong>схема аксиом</strong></span> &mdash; шаблон для генерации аксиом</li>
+<li><span style="color:#066600;"><strong>схема аксиом</strong></span> &mdash; шаблон для генерации аксиом<br><img style="width:300px;" src="axioms.png"> </img><br>
+    Интуиционисты меняют посленюю аксиому на a -&gt; !a -&gt; b</li>
 <li><span style="color:#066600;"><strong>правило Modus Ponens</strong></span> &mdash; Если доказано $\alpha$ и $\alpha \rightarrow \beta$, то считаем доказанным $\beta$</li>
 <li><span style="color:#066600;"><strong>доказательство</strong></span> &mdash; последовательность высказываний, каждое из которых либо
   аксиома, либо Modus Ponens.</li>
