Add connected topological space

--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -41,12 +41,13 @@
   $X=\mathbb R, \Omega = \{(x,+\infty)|x\in \mathbb R\} \cup \{\emptyset\}$</li>
 <li><span style="color:#066600;"><strong>дискретная топология</strong></span>
   $X \neq \emptyset, \Omega = 2^X $</li>
-<li><strong>топология на частично упорядоченном множестве</strong></li>
+<li><span style="color:#066600;"><strong>топология на частично упорядоченном множестве</strong></span></li>
 <li><strong>индуцированная топология на подпространстве</strong>
     <br>Пусть лано какое-то $S \subseteq X$. Индуцированная топология на подпространстве $X$ &mdash; $\Omega' = \left\{ y \cup X | y \in \Omega \right\}$
 </li>
-<li><strong>связность</strong></li>
-</ul>
+<li><span style="color:#066600;"><strong>связность</strong></span>
+: связное пространство &mdash; пространство такое, что его нельзя разбить на два непустых непересек. открытых подмножества
+</ul></li>
 </li>
 <li><p><strong>Исчисление высказываний</strong></p>
 
