--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -43,7 +43,7 @@
   $X \neq \emptyset, \Omega = 2^X $</li>
 <li><span style="color:#066600;"><strong>топология на частично упорядоченном множестве</strong></span></li>
 <li><strong>индуцированная топология на подпространстве</strong>
-    <br>Пусть лано какое-то $S \subseteq X$. Индуцированная топология на подпространстве $X$ &mdash; $\Omega' = \left\{ y \cup X | y \in \Omega \right\}$
+    <br>Пусть лано какое-то $S \subseteq X$. Индуцированная топология на подпространстве $X$ &mdash; $\Omega' = \left\{ y \cap X | y \in \Omega \right\}$
 </li>
 <li><span style="color:#066600;"><strong>связность</strong></span>
 : связное пространство &mdash; пространство такое, что его нельзя разбить на два непустых непересек. открытых подмножества
