--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -126,7 +126,7 @@
   <strong>def</strong>: <em>псевдодополнение</em> $~a = a \rightarrow 0$
   <br>Всякая алгебра Гейтинга &mdash; модель ИИВ
 </li>
-<li><span style="color:#066600;"><strong>булева алгебра</strong></span> &mdash; алгебрa Гейтинга такая, что $\forall a: a + ~a = 1$</li>
+<li><span style="color:#066600;"><strong>булева алгебра</strong></span> &mdash; алгебрa Гейтинга такая, что $\forall a: a + \neg a = 1$</li>
 <li><span style="color:#066600;"><strong>Гёделева алгебра</strong></span><br/>
   Алгебра Гейтинга <em>гёделева</em>, если $\forall a,b : (a+b=1 \implies a=1 | b=1)$</li>
 <li><span style="color:#066600;"><strong>операция Γ(A)</strong></span>
