--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -228,7 +228,7 @@
     </ul>
 </li>
 <li><strong>модель для формулы</strong>
-    модель &mdash; $\left \langle D, E, R \right \rangle$<br>
+    модель &mdash; $\left \langle D, E, P \right \rangle$<br>
 </li>
 <li><strong>теорема Гёделя о полноте исчисления предикатов (формулировка)</strong><br>
     <b>лемма</b>: Для любой формулы ИП найдётся эквив. ей ф-ла с поверхностными кванторами<br>
