--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -45,7 +45,7 @@
 <li><strong>индуцированная топология на подпространстве</strong>
     <br>Пусть лано какое-то $S \subseteq X$. Индуцированная топология на подпространстве $X$ &mdash; $\Omega' = \left\{ y \cap X | y \in \Omega \right\}$
 </li>
-<li><span style="color:#066600;"><strong>связность</strong></span>
+<li><span style="color:#066600;"><strong>связность(???)</strong></span>
 : связное пространство &mdash; пространство такое, что его нельзя разбить на два непустых непересек. открытых подмножества
 </ul></li>
 </li>
