--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -52,7 +52,7 @@
 <li><p><strong>Исчисление высказываний</strong></p>
 
 <ul>
-<li><span style="color:#066600;"><strong>высказывание</strong></span> &mdash; Строка в некотором алфавите, строящаяся по ледующим правилам:
+<li><span style="color:#066600;"><strong>высказывание</strong></span> &mdash; Строка в некотором алфавите, строящаяся по следующим правилам:
   <pre>
   высказывание :=
       {пропозициональная переменная}  |
@@ -62,7 +62,7 @@
   </pre><br/>
   A,B,C &hellip; &mdash; <em>пропозициональные переменные</em><br/>
   X,Y,Z &hellip; &mdash; <em>метапеременные для переменных</em></li>
-<li><span style="color:#066600;"><strong>метапеременные</strong></span> &mdash; "Plaseholder" for variables</li>
+<li><span style="color:#066600;"><strong>метапеременные</strong></span> &mdash; "Placeholder" for variables</li>
 <li><span style="color:#066600;"><strong>пропозициональные переменные</strong></span> &mdash; символы, обозначающие высказывания</li>
 <li><span style="color:#066600;"><strong>аксиома</strong></span> &mdash; высказывание</li>
 <li><span style="color:#066600;"><strong>схема аксиом</strong></span> &mdash; шаблон для генерации аксиом<br><img style="width:300px;" src="axioms.png"> </img><br>
