--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -193,9 +193,9 @@
     Чтобы оценить значение формулы в ИП, нужно задать кортеж $\left\langle D,E,P,R \right\rangle$, где:<br>
     <ul>
         <li>$D$ &mdash; предметное множество</li>
-        <li>$D$ &mdash; оценка для функциональных символов $(D^n\rightarrow D)$</li>
-        <li>$D$ &mdash; оценка для предикатов $D^n \rightarrow V$</li>
-        <li>$D$ &mdash; свободные предметные переменные</li>
+        <li>$E$ &mdash; оценка для функциональных символов $(D^n\rightarrow D)$</li>
+        <li>$P$ &mdash; оценка для предикатов $D^n \rightarrow V$</li>
+        <li>$R$ &mdash; свободные предметные переменные</li>
     </ul>
 </li>
 <li>
