--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -113,7 +113,7 @@
 </ul>
 </li>
 <li><span style="color:#066600;"><strong>дистрибутивная решётка</strong></span><br/>
-  решётка + свойство: $a+(b \cdot c) = a \cdot b + a \cdot c$<br/>
+  решётка + свойство: $a+(b \cdot c) = (a + b) \cdot (a + c)$<br/>
   <strong>лемма</strong>: $a\cdot(b+c) = a\cdot b + a \cdot c$<br/>
   <strong>теорема</strong>: решётка дистрибутивна $\iff$ не содержит ни диаманта ни пентагона</li>
 <li><span style="color:#066600;"><strong>импликативная решётка</strong></span><br/>
