--- a/MathAnalysis/Sem4/Integrals.html
+++ b/MathAnalysis/Sem4/Integrals.html
@@ -149,7 +149,8 @@
         <p>
             $\gamma$ &mdash; замкнутый контур. Тогда: <br>
             $\int_\gamma Pdx + Qdy + Rdz = \int \int_D (rot \overline F, \overline n_0) dS$<br>
-            где $D$ область с границей $\gamma$
+            где $D$ область с границей $\gamma$<br>
+            *тут дофига опущено, но не до этого
         </p>
         <h3>Поле потенциальное</h3>
         <p>Если нашли $u$ такое, что $\overline F = grad u$, то $u$ &mdash; потенциал</p>
