--- a/MathAnalysis/Sem4/Integrals.html
+++ b/MathAnalysis/Sem4/Integrals.html
@@ -151,14 +151,15 @@
         <h3>Поле потенциальное</h3>
         <p>Если нашли $u$ такое, что $\overline F = grad u$, то $u$ &mdash; потенциал</p>
         <p>
-            Как искать?<br>
+            Когда есть потенциал? $rot \overline F = 0$<br>
+            Как искать потенциал?<br>
             $u(x,y,z) = \int_{M_0}^{M(x,y,z)} \overline F d\overline r$, который не зависит от пути
         </p>
         <h3>Поле соленоидальное</h3>
         <p>
-            Что это? Поле $\overline F$ такое, что для него существует векторный потенциал $\overline W: \quad rot \overline W = \overline F$
-            Когда существует? $div F = 0$ <br>
-            Как искать?<br>
+            Что это? Поле $\overline F$ такое, что для него существует векторный потенциал $\overline W: \quad rot \overline W = \overline F$<br>
+            Когда существует? $div \overline F = 0$ <br>
+            Как искать потенциал?<br>
             $A = (P,Q,R)$<br>
             $H = (H_x,H_y,H_z)$ <br>
             $H_x = \int Qdz + \psi(x,y)$<br>
