--- a/MathAnalysis/Sem4/Integrals.html
+++ b/MathAnalysis/Sem4/Integrals.html
@@ -83,7 +83,7 @@
         <h3>Ротор, дивергенция и набла</h3>
         <p>
             $\nabla = \left( \dfrac \partial {\partial x},  \dfrac \partial {\partial y},  \dfrac \partial {\partial z} \right) $<br>
-            $grad f = \nabla f$
+            $grad f = \nabla f$<br>
             $div \overline a = \nabla \cdot \overline a$<br>
             $rot \overline a = \nabla \times \overline a$<br><br>
             <table border="1" bordercolor="yellow">
