--- a/MathLogic/Colloq/Defs.html
+++ b/MathLogic/Colloq/Defs.html
@@ -240,6 +240,7 @@
 </ul>
 <p><a href="https://www.mccme.ru/free-books/shen/shen-logic-part2-2.pdf">Шень, Верещагин</a>
 <a href="http://lpcs.math.msu.su/~plisko/intlog.pdf">Инт. логика</a>
+<a href="https://github.com/shd/logic2018/blob/master/conspect.pdf">Конспект 2018</a>
 <a href="https://github.com/shd/logic2011/blob/master/conspect.pdf">Конспект 2011</a></p>
 </body>
 </html>
